Update api, and structs
